[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "markitdown[all]>=0.1.1",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
